manually for existing Rails projects when you upgrade to this version. Change this:

  require 'webrat/rspec-rails'

to this:

  require 'webrat/core/matchers'

=== New features
* Finnish translation (Tero Tilus)
* Use Webrat's #contain matcher in generated "I should (not) see" step definitions (Bryan Helmkamp)

== Bugfixes
* Flush output in HTML formatter since JRuby doesnt do it automatically (Diego Carrion)
* Better handling of ARGV (#169 David Chelimsky, Ben Mabey)
* Compatibility with ruby-debug (do ARGV.dup in bin/cucumber so it can restart ruby with same args) (Aslak Hellesøy)

== 0.1.16 2009-01-19

This is a small bugfix release. The most notable improvement is compatibility with Webrat 0.4. Rails/Webrat users should
upgrade both Cucumber and Webrat gems.

=== New features
* Allow argument placeholders in step tables and multiline comments (#121 Joseph Wilk)
* Scenario Outline can be followed by several named Examples sections (#123 Aslak Hellesøy)
* Add the #binary= method back to the Rake task. It is needed by merb_cucumber for running the features of a merb app with it's bundled gems. (Thomas Marek)
* Added a /^When I go to (.+)$/ step definition to webrat_steps.rb and a simple page name to path mapping method (Bryan Helmkamp)

=== Bugfixes
* Fix to run single scenarios when the line number specified doesn't correspond to a step (i.e. blank lines or rows) (#160 Luismi Cavallé)

=== Removed features

== 0.1.15 2009-01-08

Bugfix release

=== New features
* 한국어! (Korean!) (John Hwang)

=== Bugfixes
* --dry-run skips running before/after/steps (#147 Ian Dees)
* Fix a minor bug in the console formatter's summary (David Chelimsky)
* Better quoting of Scenario names in Autotest (Peter Jaros)
* Added some small workarounds for unicode handling on Windows (Aslak Hellesøy)

== 0.1.14 2009-01-04

This is the first release of Cucumber that runs on Ruby 1.9. There are still some encoding-related issues 